--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Streamdata Gallery Broadcast
-url: broadcast.streamdata.gallery
-tag: Broadcast
+title: Streamdata Gallery Broadcasts
+url: broadcasts.streamdata.gallery
+tag: Broadcasts
 markdown: kramdown
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", ".DS_Store"]
 github_user: streamdata-gallery
-github_repo: broadcast
+github_repo: broadcasts
 github_branch: master
 collections:
   listings:
